# sony-nmos-buildroot

./: .gitignore  .gitmodules  README.md
os/: .gitignore
os/patches/: README.md
os/patches/buildroot/configs/: sony_nmos_pi3_defconfig  sony_nmos_rpi2_defconfig  sony_nmos_rpi3_defconfig
os/rootfs-overlay/etc/network/: interfaces
os/rootfs-overlay/root/: .bashrc  .profile
scripts/: README.md  build-os.sh  configure-build-arm.sh  copy-sdcard-image-to-sdb.sh  copy-sdcard-install-to-sdcard.sh  make-release.sh
software/: CMakeLists.txt
software/source/: CMakeLists.txt  README.md
software/source/libs/: CMakeLists.txt  README.md
software/source/libs-ext/: CMakeLists.txt  README.md
software/source/sandbox/: CMakeLists.txt  README.md  main.cpp  node_implementation.cpp
software/toolchains/: README.md  arm-buildroot-linux-gnueabihf.cmake  arm-buildroot-linux-uclibcgnueabihf.cmake
